Simplifying common code from sample
- Added Emoji support
- Extracted common code to their own js modules

--- a/ios-and-android-apps/chatty/package.json
+++ b/ios-and-android-apps/chatty/package.json
@@ -6,6 +6,7 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.16.0-rc"
+    "react-native": "^0.16.0-rc",
+    "react-native-emoji": "git+https://github.com/jorilallo/react-native-emoji.git"
   }
 }
