--- a/ios-and-android-apps/chatty/package.json
+++ b/ios-and-android-apps/chatty/package.json
@@ -6,7 +6,12 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "md5": "^2.0.0",
+    "qs": "^6.0.1",
     "react-native": "^0.16.0-rc",
-    "react-native-emoji": "git+https://github.com/jorilallo/react-native-emoji.git"
+    "react-native-awesome-button": "^1.3.4",
+    "react-native-emoji": "git+https://github.com/jorilallo/react-native-emoji.git",
+    "superheroes": "^1.0.0",
+    "validator": "^4.3.0"
   }
 }
