--- a/server/.editorconfig
+++ b/server/.editorconfig
@@ -10,7 +10,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.js]
+[*.{js,jsx}]
 indent_style = space
 indent_size = 2
 
