--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "scripts": {
     "build": "browserify ./client/app.jsx -t babelify --outfile ./public/js/app.js",
+    "build:watch": "wr -v --exec 'npm run build' client",
     "start": "npm run build && node app.js"
   },
   "dependencies": {
     "express": "^4.13.3",
+    "history": "^1.13.1",
+    "material-ui": "^0.13.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-tap-event-plugin": "^0.2.1",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
-    "browserify": "^10.2.6"
+    "browserify": "^10.2.6",
+    "wr": "^1.3.1"
   }
 }
