--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "gravatar": "^1.4.0",
     "history": "^1.13.1",
+    "lodash": "^3.10.1",
     "material-ui": "^0.13.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-tap-event-plugin": "^0.2.1",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "uuid-lib": "0.0.6"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
