--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^0.14.3",
     "react-tap-event-plugin": "^0.2.1",
     "socket.io": "^1.3.7",
-    "uuid-lib": "0.0.6"
+    "node-uuid": "1.4.7"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
