--- a/ios-and-android-apps/chatty/package.json
+++ b/ios-and-android-apps/chatty/package.json
@@ -11,7 +11,7 @@
     "react-native": "^0.16.0-rc",
     "react-native-awesome-button": "^1.3.4",
     "react-native-emoji": "git+https://github.com/jorilallo/react-native-emoji.git",
-    "superheroes": "^1.0.0",
+    "socket.io-client": "^1.3.7",
     "validator": "^4.3.0"
   }
 }
