--- a/ios-and-android-apps/chatty/package.json
+++ b/ios-and-android-apps/chatty/package.json
@@ -6,6 +6,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "classnames": "^2.2.1",
     "md5": "^2.0.0",
     "qs": "^6.0.1",
     "react-native": "^0.16.0-rc",
